src/test/ui/consts/const-eval/ub-nonnull.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:12:40
   |
LL | const NULL_PTR: NonNull<u8> = unsafe { mem::transmute(0usize) };
   |                                        ^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0, but expected something greater or equal to 1

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:17:27
   |
LL |     let ptr: &[u8; 256] = mem::transmute(&0u8); // &0 gets promoted so it does not dangle
   |                           ^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered a dangling reference (going beyond the bounds of its allocation)

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:24:37
   |
LL | const NULL_U8: NonZeroU8 = unsafe { mem::transmute(0u8) };
   |                                     ^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0, but expected something greater or equal to 1

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:26:43
   |
LL | const NULL_USIZE: NonZeroUsize = unsafe { mem::transmute(0usize) };
   |                                           ^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 0, but expected something greater or equal to 1

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:34:36
   |
LL | const UNINIT: NonZeroU8 = unsafe { MaybeUninit { uninit: () }.init };
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed at .0: encountered uninitialized bytes, but expected initialized bytes

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:42:1
   |
LL | const BAD_RANGE1: RestrictedRange1 = unsafe { RestrictedRange1(42) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 42, but expected something in the range 10..=30

error[E0080]: evaluation of constant value failed
  --> $DIR/ub-nonnull.rs:48:1
   |
LL | const BAD_RANGE2: RestrictedRange2 = unsafe { RestrictedRange2(20) };
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type validation failed: encountered 20, but expected something less or equal to 10, or greater or equal to 30

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0080`.
